--- a/css-clock/index.html
+++ b/css-clock/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
-// I am not sure if we need this, but too scared to delete.
+
+<!-- // I am not sure if we need this, but too scared to delete. -->
 <head>
 	<title>Color Clock</title>
 	<style type="text/css">
 /*custom font - Lato*/
-@import url("http://fonts.googleapis.com/css?family=Lato:100");
+@import url("//fonts.googleapis.com/css?family=Lato:100");
 * {margin: 0; padding: 0;}
 html, body {height: 100%;}
 
@@ -20,7 +21,6 @@ html, body {height: 100%;}
 <div id="color"></div>
 
 <script type="text/javascript">
-
 function displayTime(){
 	var d, h, m, s, color;
 	d = new Date(); // new Date object;
