--- a/smooth-scrolling-internal-links-jquery/index.html
+++ b/smooth-scrolling-internal-links-jquery/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link href='http://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>
+<link href='//fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>
 <title>JQuery Interal Link Animation Scrolling</title>
-<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 <script>
 $(document).ready(function(){
 	$('a[href^="#"]').on('click',function (e) {
@@ -99,7 +99,7 @@ body{
 <g:person href="https://plus.google.com/111250215868818486726" width="273" theme="light" Layout="landscape"></g:person></p>
 <hr />
 
-<p><a href="http://www.kapadiya.net/blog/smooth-scrolling-internal-links-jquery/">Return To Tutorial</a></p>
+<p><a href="//www.kapadiya.net/blog/smooth-scrolling-internal-links-jquery/">Return To Tutorial</a></p>
 
 </section>
 <script>
